...
        let button = UIButton(type: .system)
        button.setImage(UIImage(resource: .cartDelete), for: .normal)
        button.addTarget(self, action: #selector(removeButtonTapped), for: .touchUpInside)
        button.tintColor = .ypBlack
        button.adjustsImageWhenHighlighted = true
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "remove_item_button"
        return button
    }()
    
    // MARK: - Public Properties
    
    var delegate: CartItemCellDelegate?
...
    
    func setupCellUI() {
        selectionStyle = .none
        backgroundColor = .clear
        isUserInteractionEnabled = true
        contentView.isHidden = true
        accessibilityIdentifier = "cart_item_cell"
        
        [
            nftPreview,
            removeButton,
            titleLabel,
            ratingView,
...
